# lsg

./: .gitignore  CHANGELOG.md  LICENSE  lsg.cabal
app/: Main.hs
src/: Filters.hs  Main.hs  OptionParser.hs  Types.hs
src/LSG/: Config.hs  Filter.hs  OptionParser.hs  Search.hs  System.hs
