cabal-version:       2.4
name:                lsg
version:             0.1.1.0
synopsis:            Search for files in your current directory
homepage:            https://github.com/PrestonGray/lsg
license:             MIT
license-file:        LICENSE
author:              Preston Gray
maintainer:          prestongray97@gmail.com
extra-source-files:  CHANGELOG.md

library
  -- Modules exported by the library.
  exposed-modules: Filters

  -- Modules included in this library but not exported.
  -- other-modules: 

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010


executable lsg
  -- .hs or .lhs file containing the Main module.
  main-is:             Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base ^>=4.12.0.0
                     , directory

  -- Directories containing source files.
  hs-source-dirs:      src

  -- Base language which the package is written in.
  default-language:    Haskell2010

