cabal-version:       2.4
name:                lsg
version:             0.1.1.0
synopsis:            Search for files in your current directory
homepage:            https://github.com/PrestonGray/lsg
license:             MIT
license-file:        LICENSE
author:              Preston Gray
maintainer:          prestongray97@gmail.com
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Filters
                     , Types
  build-depends:       base
  hs-source-dirs:      src
  default-language:    Haskell2010

executable lsg
  main-is:             Main.hs
  build-depends:       base
                     , directory
                     , lsg
  hs-source-dirs:      app
  default-language:    Haskell2010

