cabal-version:       2.2
name:                lsg
version:             0.2.0.0
synopsis:            Search for files in your current directory
homepage:            https://github.com/PrestonGray/lsg
license:             MIT
license-file:        LICENSE
author:              Preston Gray
maintainer:          prestongray97@gmail.com
extra-source-files:  CHANGELOG.md

common deps

  ghc-options:
    -Wall
    -Werror
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -O3
  build-depends:    ansi-terminal
                  , base
                  , dhall
                  , directory
                  , optparse-applicative
                  , text

library
  import:           deps
  exposed-modules:  LSG.Config
                    LSG.Filter
                    LSG.OptionParser
                    LSG.System
  hs-source-dirs:   src
  default-language: Haskell2010

executable lsg
  import:           deps
  main-is:          Main.hs
  build-depends:    lsg
  hs-source-dirs:   app
  default-language: Haskell2010
